--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
-0.01 (11 Oct. 2010)
--------------------
+0.0.2 (12 Oct. 2010)
+* mdpi, ldpi resources added, screen-supports manifest tags
+
+0.0.1 (11 Oct. 2010)
 * initial release, just one available theme, mdpi and ldpi resources missing
