Actionbar UI Pattern with screenshot
updated changelog and readme files

restructured shots directory

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.3 (14 Oct. 2010)
+* Action Bar UI Pattern added, screenshot
+* dark theme started
+
 0.0.2 (12 Oct. 2010)
 * mdpi, ldpi resources added, screen-supports manifest tags
 
