--- a/README
+++ b/README
@@ -13,7 +13,7 @@ PROJECT STRUCTURE
 -----------------
 
 This project is written in the form of an app, in a similar manner to the Android Samples application: 
-Each sample is implemented as an activity, each demoing his own theme. A theme can consist of XML resources, graphics or both (for example buttons or animations might contain XML+PNGs).
+Each sample is implemented as an activity, each demoing its own theme. A theme can consist of XML resources, graphics or both (for example buttons or animations might contain XML+PNGs).
 The main screen contains a list which links to each sample/activity. 
 Additionally, activities are split into sections. This will allow for a better organization. 
 Sample sections could be: "light themes", "black themes", "buttons", "animations", etc.
@@ -30,13 +30,14 @@ This is what you should know before contributing:
 * How this project is structured (see PROJECT STRUCTURE section)
   You should place each activity in its own section (Keep in mind each section corresponds to a package)
 
-* Since all the resources from different themes are placed together in the same folders (drawable, layout, etc.), each theme should prefix their own files with the theme name, followed by an underscore.
+* Since all the resources from different themes are placed together in the same folders (drawable, layout, etc.), each resource should be prefixed with their name, followed by an underscore.
+  This not only applies to file names, but also to resource names (eg. android:name="themename_button")
 
 * Submitting patches or pull requests are preferred, but you could also send a standalone application which demoes the theme, and I will include it among the existing samples.
 
 * Your submissions will be greatly appreciated! =D
 
-For instance, if you were to contribute a theme (named asdf) which consists of a styles.xml, button.9.png and an activity showing how the theme looks like, you should rename the files to: 
+For instance, if you were to contribute a theme (named asdf) which consists of styles.xml, button.9.png and an activity showing how the theme looks like, you should rename the files to: 
 	asdf_styles.xml, asdf_button.9.png, Asdf.java
 
 At this point all that should be left is to include a reference to Asdf.class in the corresponding List Activity.
